--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,14 +1,59 @@
-<footer>
-  <div class="f-info">
+<!-- <footer>
+  <div class="f-info" style="text-decoration: none;">
     <div class="f-info-socials">
-      <i class="fa-brands fa-square-facebook"></i>
-      <i class="fa-brands fa-square-instagram"></i>
-      <i class="fa-brands fa-square-linkedin"></i>
+      <a href="www.linkedin.com/in/agam-arora-82024b2ab"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="https://github.com/Agam00"><i class="fa-brands fa-github"></i></a>
+      <a href="https://x.com/Agam2928"><i class="fa-brands fa-x-twitter"></i></a>
+     
     </div>
     <div class="f-info-brand">&copy;StayScape Private Limited</div>
     <div class="f-info-links">
       <a href="/privacy">Privacy</a>
       <a href="/terms">Terms</a>
     </div>
+  </div>
+</footer> -->
+
+<footer>
+  <div class="f-info">
+
+    <div class="f-info-socials">
+      <a
+        href="https://www.linkedin.com/in/agam-arora-82024b2ab"
+        target="_blank"
+        rel="noopener noreferrer"
+        aria-label="LinkedIn"
+      >
+        <i class="fa-brands fa-linkedin"></i>
+      </a>
+
+      <a
+        href="https://github.com/Agam00"
+        target="_blank"
+        rel="noopener noreferrer"
+        aria-label="GitHub"
+      >
+        <i class="fa-brands fa-github"></i>
+      </a>
+
+      <a
+        href="https://x.com/Agam2928"
+        target="_blank"
+        rel="noopener noreferrer"
+        aria-label="X (Twitter)"
+      >
+        <i class="fa-brands fa-x-twitter"></i>
+      </a>
+    </div>
+
+    <div class="f-info-brand">
+      &copy; StayScape Private Limited
+    </div>
+
+    <div class="f-info-links">
+      <a href="/privacy">Privacy</a>
+      <a href="/terms">Terms</a>
+    </div>
+
   </div>
 </footer>
