--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -2,63 +2,78 @@
 <body>
   <div class="row mt-3">
     <div class="col-8 offset-2">
-      
       <h3>Edit your Listing</h3>
-      <form method="POST" action="/listings/<%= listing._id%>?_method=PUT">
+      <form
+        method="POST"
+        action="/listings/<%= listing._id%>?_method=PUT"
+        novalidate
+        class="needs-validation"
+      >
         <div class="mb-3">
-          <label for="title" class="form-label">Title</label>
+          <label for="title" class="form-label">Title *</label>
           <input
             name="listing[title]"
             value="<%= listing.title %>"
             type="text"
             class="form-control"
+            required
           />
+          <div class="invalid-feedback">Add a valid title</div>
         </div>
 
         <div class="mb-3">
-          <label for="description" class="form-label">Description</label>
-          <textarea name="listing[description]" class="form-control">
+          <label for="description" class="form-label">Description *</label>
+          <textarea name="listing[description]" class="form-control" required>
 <%= listing.description %></textarea
           >
+          <div class="invalid-feedback">Enter a short description</div>
         </div>
 
         <div class="mb-3">
-          <label for="image" class="form-label">Image Link</label>
+          <label for="image" class="form-label">Image Link *</label>
           <input
             name="listing[image]"
             value="<%= listing.image %>"
             type="text"
             class="form-control"
+            required
           />
+          <div class="invalid-feedback">Add a valid image link</div>
         </div>
         <div class="row">
           <div class="mb-3 col-md-4">
-            <label for="price" class="form-label">Price</label>
+            <label for="price" class="form-label">Price *</label>
             <input
               name="listing[price]"
               value="<%= listing.price %>"
               type="number"
               class="form-control"
+              required
             />
+            <div class="invalid-feedback">enter a valid price</div>
           </div>
           <div class="mb-3 col-md-8">
-            <label for="country" class="form-label">Country</label>
+            <label for="country" class="form-label">Country *</label>
             <input
               name="listing[country]"
               value="<%= listing.country %>"
               type="text"
               class="form-control"
+              required
             />
+            <div class="invalid-feedback">Country name should be valid</div>
           </div>
         </div>
         <div class="mb-3">
-          <label for="location" class="form-label">Location</label>
+          <label for="location" class="form-label">Location *</label>
           <input
             name="listing[location]"
             value="<%= listing.location %>"
             type="text"
             class="form-control"
+            required
           />
+          <div class="invalid-feedback">Location should be valid</div>
         </div>
         <button class="btn btn-dark mb-3 edit-btn mt-3">Edit</button>
       </form>
