--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -2,7 +2,7 @@
 <body>
   <div class="row mt-3">
     <div class="col-8 offset-3">
-      <h3>Listing Details</h3>
+      <h3><%= listing.title %></h3>
     </div>
     <div class="card col-6 offset-3 show-card">
       <img
@@ -10,29 +10,81 @@
         class="card-img-top show-img"
         alt="listing_image"
       />
-      <div class="card-body">
+      <div class="card-body mt-3">
         <p class="card-text">
-          <b><%= listing.title %></b> <br>
-          <%= listing.description %> <br>
-          &#8377; <%= listing.price.toLocaleString("en-IN") %></li><br>
-          <%= listing.location %></li><br>
+          <%= listing.description %> <br />
+          &#8377; <%= listing.price.toLocaleString("en-IN") %><br />
+          <%= listing.location %><br />
           <%= listing.country %>
-
-        
         </p>
       </div>
     </div>
 
-   
     <br />
     <div class="btns">
-    <a href="/listings/<%=listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
-    
-     
-    <form method="post" action="/listings/<%= listing._id %>?_method=Delete">
-      <button class="btn btn-dark offset-5">Delete</button>
-    </form>
-    
-  </div>
+      <a
+        href="/listings/<%=listing._id %>/edit"
+        class="btn btn-dark col-1 offset-3 edit-btn"
+        >Edit</a
+      >
+
+      <form method="post" action="/listings/<%= listing._id %>?_method=Delete">
+        <button class="btn btn-dark offset-5">Delete</button>
+      </form>
+    </div>
+    <div class="col-8 offset-3 mb-3">
+      <hr />
+      <h4>Leave a review</h4>
+      <form
+        method="POST"
+        action="/listings/<%=listing._id %>/reviews"
+        class="needs-validation"
+        novalidate
+      >
+        <div class="mb-3 mt-3">
+          <label for="rating" class="form-label">Rating</label>
+          <input
+            type="range"
+            id="rating"
+            name="review[rating]"
+            min="1"
+            max="5"
+            class="form-range"
+          />
+        </div>
+        <div class="mb-3 mt-3">
+          <label for="comments" class="form-label">comments</label>
+          <textarea
+            name="review[comment]"
+            id="comments"
+            cols="30"
+            rows="5"
+            class="form-control"
+            required
+          ></textarea>
+          <div class="invalid-feedback">Dont leave comment empty</div>
+        </div>
+        <button class="btn btn-outline-dark">Submit</button>
+      </form>
+    </div>
+    <div class="col-8 offset-3 row">
+      <hr />
+      <h4>All Reviews</h4>
+      <% for(review of listing.reviews){ %>
+      <div class="card review-card col-5 mb-3 ms-3 mt-3">
+        <div class="card-body mt-3">
+          <h5 class="card-title">John Doe</h5>
+          <p class="card-text"><%= review.comment %></p>
+          <p class="card-text"><%= review.rating %> stars</p>
+        </div>
+        <form
+          method="post"
+          action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=Delete"
+        >
+          <button class="btn btn-dark mb-3 mt-3">Delete</button>
+        </form>
+      </div>
+      <% } %>
+    </div>
   </div>
 </body>
